# vezgo-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  env.example  pyproject.toml  setup.py
examples/: README.md
examples/basic/: README.md  basic.py  env.example  flask_server.py
src/vezgo/: __init__.py  client.py  constants.py  exceptions.py
src/vezgo/resources/: __init__.py  accounts.py  base.py  history.py  orders.py  providers.py  teams.py  transactions.py
tests/: __init__.py  test_client.py  test_resources.py
